# service-easypwned

./: .release-please-manifest.json  Dockerfile  release-please-config.json  renovate.json
.github/workflows/: build-and-test.yml  release-please.yml  renovate.yml
downloader/: CHANGELOG.md  Cargo.toml
downloader/src/: download_coordinator.rs  main.rs
downloader/src/sink/: bloom.rs
easypwned/: CHANGELOG.md  Cargo.toml
easypwned/src/: main.rs
easypwned/tests/: hash_format.rs
easypwned_bloom/: CHANGELOG.md  Cargo.toml
easypwned_bloom/src/bloom/: mod.rs
easypwned_bloom/tests/: bloom_roundtrip.rs
