[package]
name = "easypwned_haveibeenpwned_downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bloomfilter = "=1.0.16"
anyhow = "=1.0.102"
tokio = { version = "=1.52.3", features = ["full"]}
tracing = "=0.1.44"
tracing-subscriber = "=0.3.23"
serde_derive = "=1.0.228"
clap = { version = "=4.6.1", features = ["derive"] }
byteorder = "=1.5.0"
hex = "=0.4.3"
reqwest = { version = "=0.12.8", default-features = false, features = ["rustls-tls", "gzip", "brotli", "deflate"] }
easypwned_bloom = {path = "../easypwned_bloom"}
bincode = { version = "=1.3.3"}