[package]
name = "easypwned"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "=1.0.102"
axum = "=0.8.9"
tokio = { version = "=1.52.3", features = ["full"]}
serde = "=1.0.228"
serde_json = "=1.0.150"
serde_derive = "=1.0.228"
tracing = "=0.1.44"
sha-1 = "=0.10.1"
base16ct = { version = "=0.2.0", features = ["alloc", "std"]}
clap = { version = "=4.6.1", features = ["derive"] }
easypwned_bloom = {path = "../easypwned_bloom"}