[package]
name = "easypwned"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
axum = "0.8.*"
tokio = { version = "1.*", features = ["full"]}
serde = "1.*"
serde_json = "1.*"
serde_derive = "1.*"
tracing = "0.1.*"
sha-1 = "0.*"
base16ct = { version = "1.0", features = ["alloc"]}
clap = { version = "4.*", features = ["derive"] }
easypwned_bloom = {path = "../easypwned_bloom"}

[dev-dependencies]
sha-1 = "0.10"
base16ct = { version = "1.0", features = ["alloc"] }